--- a/develop/print.html
+++ b/develop/print.html
@@ -1007,6 +1007,25 @@ frontend matrix-federation
 backend matrix
   server matrix 127.0.0.1:8008
 </code></pre>
+<p><a href="delegate.html">Delegation</a> example:</p>
+<pre><code>frontend https
+  acl matrix-well-known-client-path path /.well-known/matrix/client
+  acl matrix-well-known-server-path path /.well-known/matrix/server
+  use_backend matrix-well-known-client if matrix-well-known-client-path
+  use_backend matrix-well-known-server if matrix-well-known-server-path
+ 
+backend matrix-well-known-client
+  http-after-response set-header Access-Control-Allow-Origin &quot;*&quot;
+  http-after-response set-header Access-Control-Allow-Methods &quot;GET, POST, PUT, DELETE, OPTIONS&quot;
+  http-after-response set-header Access-Control-Allow-Headers &quot;Origin, X-Requested-With, Content-Type, Accept, Authorization&quot;
+  http-request return status 200 content-type application/json string '{&quot;m.homeserver&quot;:{&quot;base_url&quot;:&quot;https://matrix.example.com&quot;},&quot;m.identity_server&quot;:{&quot;base_url&quot;:&quot;https://identity.example.com&quot;}}'
+
+backend matrix-well-known-server
+  http-after-response set-header Access-Control-Allow-Origin &quot;*&quot;
+  http-after-response set-header Access-Control-Allow-Methods &quot;GET, POST, PUT, DELETE, OPTIONS&quot;
+  http-after-response set-header Access-Control-Allow-Headers &quot;Origin, X-Requested-With, Content-Type, Accept, Authorization&quot;
+  http-request return status 200 content-type application/json string '{&quot;m.server&quot;:&quot;matrix.example.com:443&quot;}'
+</code></pre>
 <h3 id="relayd"><a class="header" href="#relayd">Relayd</a></h3>
 <pre><code>table &lt;webserver&gt;    { 127.0.0.1 }
 table &lt;matrixserver&gt; { 127.0.0.1 }
@@ -3028,6 +3047,28 @@ In addition, each setting has an example of its usage, with the proper indentati
 shown. </p>
 </li>
 </ul>
+<h2 id="contents"><a class="header" href="#contents">Contents</a></h2>
+<p><a href="usage/configuration/config_documentation.html#modules">Modules</a></p>
+<p><a href="usage/configuration/config_documentation.html#server">Server</a></p>
+<p><a href="usage/configuration/config_documentation.html#homeserver-blocking">Homeserver Blocking</a></p>
+<p><a href="usage/configuration/config_documentation.html#tls">TLS</a></p>
+<p><a href="usage/configuration/config_documentation.html#federation">Federation</a></p>
+<p><a href="usage/configuration/config_documentation.html#caching">Caching</a></p>
+<p><a href="usage/configuration/config_documentation.html#database">Database</a></p>
+<p><a href="usage/configuration/config_documentation.html#logging">Logging</a></p>
+<p><a href="usage/configuration/config_documentation.html#ratelimiting">Ratelimiting</a></p>
+<p><a href="usage/configuration/config_documentation.html#media-store">Media Store</a></p>
+<p><a href="usage/configuration/config_documentation.html#captcha">Captcha</a></p>
+<p><a href="usage/configuration/config_documentation.html#turn">TURN</a></p>
+<p><a href="usage/configuration/config_documentation.html#registration">Registration</a></p>
+<p><a href="usage/configuration/config_documentation.html#api-configuration">API Configuration</a></p>
+<p><a href="usage/configuration/config_documentation.html#signing-keys">Signing Keys</a></p>
+<p><a href="usage/configuration/config_documentation.html#single-sign-on-integration">Single Sign On Integration</a></p>
+<p><a href="usage/configuration/config_documentation.html#push">Push</a></p>
+<p><a href="usage/configuration/config_documentation.html#rooms">Rooms</a></p>
+<p><a href="usage/configuration/config_documentation.html#opentracing">Opentracing</a></p>
+<p><a href="usage/configuration/config_documentation.html#workers">Workers</a></p>
+<p><a href="usage/configuration/config_documentation.html#background-updates">Background Updates</a></p>
 <h2 id="modules"><a class="header" href="#modules">Modules</a></h2>
 <p>Server admins can expand Synapse's functionality with external modules.</p>
 <p>See <a href="usage/configuration/../../modules/index.html">here</a> for more
@@ -7219,6 +7260,12 @@ oembed:
 # Defaults to false. Uncomment the following to require tokens:
 #
 #registration_requires_token: true
+
+# Allow users to submit a token during registration to bypass any required 3pid
+# steps configured in `registrations_require_3pid`.
+# Defaults to false, requiring that registration tokens (if enabled) complete a 3pid flow.
+#
+#enable_registration_token_3pid_bypass: false
 
 # If set, allows registration of standard or admin accounts by anyone who
 # has the shared secret, even if registration is otherwise disabled.
@@ -11968,7 +12015,7 @@ replication port. If the worker will handle HTTP requests then the
 as the <code>listeners</code> option in the shared config.</p>
 <p>For example:</p>
 <pre><code class="language-yaml">worker_app: synapse.app.generic_worker
-worker_name: worker1
+worker_name: generic_worker1
 
 # The replication listener on the main synapse process.
 worker_replication_host: 127.0.0.1
@@ -11980,7 +12027,7 @@ worker_listeners:
     resources:
       - names: [client, federation]
 
-worker_log_config: /home/matrix/synapse/config/worker1_log_config.yaml
+worker_log_config: /etc/matrix-synapse/generic-worker-log.yaml
 </code></pre>
 <p>...is a full configuration for a generic worker instance, which will expose a
 plain HTTP endpoint on port 8083 separately serving various endpoints, e.g.
@@ -12163,6 +12210,31 @@ configuration would include:</p>
 stream_writers:
     events: event_persister1
 </code></pre>
+<p>An example for a stream writer instance:</p>
+<pre><code class="language-yaml">worker_app: synapse.app.generic_worker
+worker_name: event_persister1 
+
+# The replication listener on the main synapse process.
+worker_replication_host: 127.0.0.1
+worker_replication_http_port: 9093
+
+worker_listeners:
+  - type: http
+    port: 8034
+    resources:
+      - names: [replication]
+
+  # Enable listener if this stream writer handles endpoints for the `typing` or
+  # `to_device` streams. Uses a different port to the `replication` listener to
+  # avoid exposing the `replication` listener publicly.
+  #
+  #- type: http
+  #  port: 8035
+  #  resources:
+  #    - names: [client]
+
+worker_log_config: /etc/matrix-synapse/event-persister-log.yaml
+</code></pre>
 <p>Some of the streams have associated endpoints which, for maximum efficiency, should
 be routed to the workers handling that stream. See below for the currently supported
 streams and the endpoints associated with them:</p>
@@ -12215,6 +12287,16 @@ the shared configuration would include:</p>
 </code></pre>
 <p>You might also wish to investigate the <code>update_user_directory</code> and
 <code>media_instance_running_background_jobs</code> settings.</p>
+<p>An example for a dedicated background worker instance:</p>
+<pre><code class="language-yaml">worker_app: synapse.app.generic_worker
+worker_name: background_worker
+
+# The replication listener on the main synapse process.
+worker_replication_host: 127.0.0.1
+worker_replication_http_port: 9093
+
+worker_log_config: /etc/matrix-synapse/background-worker-log.yaml
+</code></pre>
 <h3 id="synapseapppusher"><a class="header" href="#synapseapppusher"><code>synapse.app.pusher</code></a></h3>
 <p>Handles sending push notifications to sygnal and email. Doesn't handle any
 REST endpoints itself, but you should set <code>start_pushers: False</code> in the
@@ -12345,15 +12427,15 @@ in systemd service files, but not required for synctl).</p>
 |   Main       |  |   Generic    |  |   Generic    |  |  Event       |
 |   Process    |  |   Worker 1   |  |   Worker 2   |  |  Persister   |
 +--------------+  +--------------+  +--------------+  +--------------+
-      ^    ^          |   ^   |         |   ^   |          ^    ^
-      |    |          |   |   |         |   |   |          |    |
-      |    |          |   |   |  HTTP   |   |   |          |    |
-      |    +----------+&lt;--|---|---------+   |   |          |    |
-      |                   |   +-------------|--&gt;+----------+    |
-      |                   |                 |                   |
-      |                   |                 |                   |
-      v                   v                 v                   v
-====================================================================
+      ^    ^          |   ^   |         |   ^   |         |   ^   ^
+      |    |          |   |   |         |   |   |         |   |   |
+      |    |          |   |   |  HTTP   |   |   |         |   |   |
+      |    +----------+&lt;--|---|---------+&lt;--|---|---------+   |   |
+      |                   |   +-------------|--&gt;+-------------+   |
+      |                   |                 |                     |
+      |                   |                 |                     |
+      v                   v                 v                     v
+======================================================================
                                                          Redis pub/sub channel
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h3 id="using-synctl-with-workers"><a class="header" href="#using-synctl-with-workers">Using synctl with workers</a></h3>
@@ -12396,12 +12478,13 @@ Below is a sample <code>generic_worker</code> worker configuration file.</p>
 <pre><code class="language-yaml">worker_app: synapse.app.generic_worker
 worker_name: generic_worker1
 
+# The replication listener on the main synapse process.
 worker_replication_host: 127.0.0.1
 worker_replication_http_port: 9093
 
 worker_listeners:
   - type: http
-    port: 8011
+    port: 8083
     resources:
       - names: [client, federation]
 
@@ -14962,7 +15045,7 @@ any access token associated with them.</p>
   &quot;devices&quot;: [
     &quot;QBUAZIFURK&quot;,
     &quot;AUIECTSRND&quot;
-  ],
+  ]
 }
 </code></pre>
 <p>An empty JSON dict is returned.</p>
