--- a/develop/print.html
+++ b/develop/print.html
@@ -1631,6 +1631,30 @@ dpkg -i matrix-synapse-py3_1.3.0+stretch1_amd64.deb
 </code></pre>
 </li>
 </ul>
+<h1 id="upgrading-to-v1590"><a class="header" href="#upgrading-to-v1590">Upgrading to v1.59.0</a></h1>
+<h2 id="device-name-lookup-over-federation-has-been-disabled-by-default"><a class="header" href="#device-name-lookup-over-federation-has-been-disabled-by-default">Device name lookup over federation has been disabled by default</a></h2>
+<p>The names of user devices are no longer visible to users on other homeservers by default.
+Device IDs are unaffected, as these are necessary to facilitate end-to-end encryption.</p>
+<p>To re-enable this functionality, set the
+<a href="https://matrix-org.github.io/synapse/v1.59/usage/configuration/config_documentation.html#federation"><code>allow_device_name_lookup_over_federation</code></a>
+homeserver config option to <code>true</code>.</p>
+<h2 id="deprecation-of-the-synapseappappservice-worker-application-type"><a class="header" href="#deprecation-of-the-synapseappappservice-worker-application-type">Deprecation of the <code>synapse.app.appservice</code> worker application type</a></h2>
+<p>The <code>synapse.app.appservice</code> worker application type allowed you to configure a
+single worker to use to notify application services of new events, as long
+as this functionality was disabled on the main process with <code>notify_appservices: False</code>.</p>
+<p>To unify Synapse's worker types, the <code>synapse.app.appservice</code> worker application
+type and the <code>notify_appservices</code> configuration option have been deprecated.</p>
+<p>To get the same functionality, it's now recommended that the <code>synapse.app.generic_worker</code>
+worker application type is used and that the <code>notify_appservices_from_worker</code> option
+is set to the name of a worker.</p>
+<p>For the time being, <code>notify_appservices_from_worker</code> can be used alongside
+<code>synapse.app.appservice</code> and <code>notify_appservices</code> to make it easier to transition
+between the two configurations, however please note that:</p>
+<ul>
+<li>the options must not contradict each other (otherwise Synapse won't start); and</li>
+<li>the <code>notify_appservices</code> option will be removed in a future release of Synapse.</li>
+</ul>
+<p>Please see <a href="workers.html#notifying-application-services">the relevant section of the worker documentation</a> for more information.</p>
 <h1 id="upgrading-to-v1580"><a class="header" href="#upgrading-to-v1580">Upgrading to v1.58.0</a></h1>
 <h2 id="groupscommunities-feature-has-been-disabled-by-default"><a class="header" href="#groupscommunities-feature-has-been-disabled-by-default">Groups/communities feature has been disabled by default</a></h2>
 <p>The non-standard groups/communities feature in Synapse has been disabled by default
@@ -3501,6 +3525,17 @@ session. Defaults to 0. </p>
 <pre><code class="language-yaml">mau_trial_days: 5
 </code></pre>
 <hr />
+<p>Config option: <code>mau_appservice_trial_days</code></p>
+<p>The option <code>mau_appservice_trial_days</code> is similar to <code>mau_trial_days</code>, but applies a different
+trial number if the user was registered by an appservice. A value
+of 0 means no trial days are applied. Appservices not listed in this dictionary
+use the value of <code>mau_trial_days</code> instead.</p>
+<p>Example configuration:</p>
+<pre><code class="language-yaml">mau_appservice_trial_days: 
+  my_appservice_id: 3
+  another_appservice_id: 6
+</code></pre>
+<hr />
 <p>Config option: <code>mau_limit_alerting</code></p>
 <p>The option <code>mau_limit_alerting</code> is a means of limiting client-side alerting
 should the mau limit be reached. This is useful for small instances
@@ -3816,11 +3851,11 @@ on this homeserver.</p>
 </code></pre>
 <hr />
 <p>Config option: <code>allow_device_name_lookup_over_federation</code></p>
-<p>Set this option to false to disable device display name lookup over federation. By default, the
-Federation API allows other homeservers to obtain device display names of any user
+<p>Set this option to true to allow device display name lookup over federation. By default, the
+Federation API prevents other homeservers from obtaining the display names of any user devices
 on this homeserver.</p>
 <p>Example configuration:</p>
-<pre><code class="language-yaml">allow_device_name_lookup_over_federation: false
+<pre><code class="language-yaml">allow_device_name_lookup_over_federation: true
 </code></pre>
 <hr />
 <h2 id="caching"><a class="header" href="#caching">Caching</a></h2>
@@ -6345,6 +6380,11 @@ manhole_settings:
 # sign up in a short space of time never to return after their initial
 # session.
 #
+# The option `mau_appservice_trial_days` is similar to `mau_trial_days`, but
+# applies a different trial number if the user was registered by an appservice.
+# A value of 0 means no trial days are applied. Appservices not listed in this
+# dictionary use the value of `mau_trial_days` instead.
+#
 # 'mau_limit_alerting' is a means of limiting client side alerting
 # should the mau limit be reached. This is useful for small instances
 # where the admin has 5 mau seats (say) for 5 specific people and no
@@ -6355,6 +6395,8 @@ manhole_settings:
 #max_mau_value: 50
 #mau_trial_days: 2
 #mau_limit_alerting: false
+#mau_appservice_trial_days:
+#  &quot;appservice-id&quot;: 1
 
 # If enabled, the metrics for the number of monthly active users will
 # be populated, however no one will be limited. If limit_usage_by_mau
@@ -6647,11 +6689,11 @@ retention:
 #
 #allow_profile_lookup_over_federation: false
 
-# Uncomment to disable device display name lookup over federation. By default, the
-# Federation API allows other homeservers to obtain device display names of any user
-# on this homeserver. Defaults to 'true'.
+# Uncomment to allow device display name lookup over federation. By default, the
+# Federation API prevents other homeservers from obtaining the display names of
+# user devices on this homeserver. Defaults to 'false'.
 #
-#allow_device_name_lookup_over_federation: false
+#allow_device_name_lookup_over_federation: true
 
 
 ## Caching ##
@@ -10097,8 +10139,6 @@ follows:</p>
   &quot;token&quot;: &quot;&lt;jwt&gt;&quot;
 }
 </code></pre>
-<p>Note that the login type of <code>m.login.jwt</code> is supported, but is deprecated. This
-will be removed in a future version of Synapse.</p>
 <p>The <code>token</code> field should include the JSON web token with the following claims:</p>
 <ul>
 <li>A claim that encodes the local part of the user ID is required. By default,
@@ -12290,6 +12330,15 @@ worker_replication_http_port: 9093
 
 worker_log_config: /etc/matrix-synapse/background-worker-log.yaml
 </code></pre>
+<h4 id="notifying-application-services"><a class="header" href="#notifying-application-services">Notifying Application Services</a></h4>
+<p>You can designate one worker to send output traffic to Application Services.</p>
+<p>Specify its name in the shared configuration as follows:</p>
+<pre><code class="language-yaml">notify_appservices_from_worker: worker_name
+</code></pre>
+<p>This work cannot be load-balanced; please ensure the main process is restarted
+after setting this option in the shared configuration!</p>
+<p>This style of configuration supersedes the legacy <code>synapse.app.appservice</code>
+worker application type.</p>
 <h3 id="synapseapppusher"><a class="header" href="#synapseapppusher"><code>synapse.app.pusher</code></a></h3>
 <p>Handles sending push notifications to sygnal and email. Doesn't handle any
 REST endpoints itself, but you should set <code>start_pushers: False</code> in the
@@ -12301,6 +12350,8 @@ pusher instances by their worker name, e.g.:</p>
     - pusher_worker2
 </code></pre>
 <h3 id="synapseappappservice"><a class="header" href="#synapseappappservice"><code>synapse.app.appservice</code></a></h3>
+<p><strong>Deprecated as of Synapse v1.58.</strong> <a href="workers.html#notifying-application-services">Use <code>synapse.app.generic_worker</code> with the
+<code>notify_appservices_from_worker</code> option instead.</a></p>
 <p>Handles sending output traffic to Application Services. Doesn't handle any
 REST endpoints itself, but you should set <code>notify_appservices: False</code> in the
 shared configuration file to stop the main synapse sending appservice notifications.</p>
@@ -16040,7 +16091,7 @@ WHERE room_id IN (WHERE room_id IN (
 <tr><td>NNNN</td><td>Total time waiting for response to DB queries across all parallel DB work from this request</td></tr>
 <tr><td>OOOO</td><td>Count of DB transactions performed</td></tr>
 <tr><td>PPPP</td><td>Response body size</td></tr>
-<tr><td>QQQQ</td><td>Response status code (prefixed with ! if the socket was closed before the response was generated)</td></tr>
+<tr><td>QQQQ</td><td>Response status code<br/>Suffixed with <code>!</code> if the socket was closed before the response was generated.<br/>A <code>499!</code> status code indicates that Synapse also cancelled request processing after the socket was closed.<br/></td></tr>
 <tr><td>RRRR</td><td>Request</td></tr>
 <tr><td>SSSS</td><td>User-agent</td></tr>
 <tr><td>TTTT</td><td>Events fetched from DB to service this request (note that this does not include events fetched from the cache)</td></tr>
