--- a/develop/upgrade.html
+++ b/develop/upgrade.html
@@ -232,6 +232,30 @@ dpkg -i matrix-synapse-py3_1.3.0+stretch1_amd64.deb
 </code></pre>
 </li>
 </ul>
+<h1 id="upgrading-to-v1590"><a class="header" href="#upgrading-to-v1590">Upgrading to v1.59.0</a></h1>
+<h2 id="device-name-lookup-over-federation-has-been-disabled-by-default"><a class="header" href="#device-name-lookup-over-federation-has-been-disabled-by-default">Device name lookup over federation has been disabled by default</a></h2>
+<p>The names of user devices are no longer visible to users on other homeservers by default.
+Device IDs are unaffected, as these are necessary to facilitate end-to-end encryption.</p>
+<p>To re-enable this functionality, set the
+<a href="https://matrix-org.github.io/synapse/v1.59/usage/configuration/config_documentation.html#federation"><code>allow_device_name_lookup_over_federation</code></a>
+homeserver config option to <code>true</code>.</p>
+<h2 id="deprecation-of-the-synapseappappservice-worker-application-type"><a class="header" href="#deprecation-of-the-synapseappappservice-worker-application-type">Deprecation of the <code>synapse.app.appservice</code> worker application type</a></h2>
+<p>The <code>synapse.app.appservice</code> worker application type allowed you to configure a
+single worker to use to notify application services of new events, as long
+as this functionality was disabled on the main process with <code>notify_appservices: False</code>.</p>
+<p>To unify Synapse's worker types, the <code>synapse.app.appservice</code> worker application
+type and the <code>notify_appservices</code> configuration option have been deprecated.</p>
+<p>To get the same functionality, it's now recommended that the <code>synapse.app.generic_worker</code>
+worker application type is used and that the <code>notify_appservices_from_worker</code> option
+is set to the name of a worker.</p>
+<p>For the time being, <code>notify_appservices_from_worker</code> can be used alongside
+<code>synapse.app.appservice</code> and <code>notify_appservices</code> to make it easier to transition
+between the two configurations, however please note that:</p>
+<ul>
+<li>the options must not contradict each other (otherwise Synapse won't start); and</li>
+<li>the <code>notify_appservices</code> option will be removed in a future release of Synapse.</li>
+</ul>
+<p>Please see <a href="workers.html#notifying-application-services">the relevant section of the worker documentation</a> for more information.</p>
 <h1 id="upgrading-to-v1580"><a class="header" href="#upgrading-to-v1580">Upgrading to v1.58.0</a></h1>
 <h2 id="groupscommunities-feature-has-been-disabled-by-default"><a class="header" href="#groupscommunities-feature-has-been-disabled-by-default">Groups/communities feature has been disabled by default</a></h2>
 <p>The non-standard groups/communities feature in Synapse has been disabled by default
